styles/modules/Resource.module.scss
/**
 * Copyright 2021 The Rode Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@import "styles/constants";
@import "styles/mixins";

.container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.resourceHeader {
  display: flex;
  max-width: 100%;
  width: 100%;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  padding: 1rem 2rem;
  position: sticky;
  top: 0;

  @include tabletAndLarger {
    flex-direction: row;
    align-items: center;
  }
}

.resourceName {
  font-size: 1.25rem;
  font-weight: 700;
  @include ellipsis(calc(100vw - 5rem));

  @include tabletAndLarger {
    font-size: 1.5rem;
    max-width: calc(48vw - 2rem);
  }
}

.resourceDetails {
  display: none;

  @include tabletAndLarger {
    display: unset;
    max-width: calc(50vw - 5rem);
  }
}

.version {
  text-align: right;
  @include ellipsis(calc(100vw - 5rem));

  @include tabletAndLarger {
    max-width: calc(50vw - 5rem);
  }
}

.playgroundContainer {
  height: fit-content;
  width: 100%;

  @include tabletAndLarger {
    height: 0.25rem;
    position: relative;
  }
}

.playgroundButton {
  margin: 0.25rem auto 0;

  @include tabletAndLarger {
    margin: 0 0 0 auto;
    position: relative;
    top: 0.5rem;
    right: 0.5rem;
  }
}

.darkTheme {
  .resourceHeader {
    background-color: $LAGOON;
    box-shadow: $DT_BOX_SHADOW;

    > * {
      color: $DARK_GREY;
    }
  }
}

.lightTheme {
  .resourceHeader {
    background-color: $DEEP_SEA;
    box-shadow: $LT_BOX_SHADOW;

    > * {
      color: $SOFT_WHITE;
    }
  }
}

